--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [CONFIG]
 database_rel_path = data/database_linguistique.db
 namespace = Bottest
-namespace_id =
+namespace_id = 3000
 category = word
 debug = True
 limit = 30
